@@ -27,7 +27,7 @@ xplsprinters_LDADD = $(XPLSPRINTERS_LIBS)
 xplsprinters_SOURCES =	\
         xplsprinters.c
 
-appman_SOURCES = \
+appman_PRE = \
         xplsprinters.man
 
 EXTRA_DIST = \
@@ -35,9 +35,9 @@ EXTRA_DIST = \
 
 appmandir = $(APP_MAN_DIR)
 
-appman_DATA = $(appman_SOURCES:man=@APP_MAN_SUFFIX@)
+appman_DATA = $(appman_PRE:man=@APP_MAN_SUFFIX@)
 
-EXTRA_DIST += $(appman_SOURCES)
+EXTRA_DIST += $(appman_PRE)
 CLEANFILES = $(appman_DATA)
 
 SED = sed
